# Open-ALO

./: .gitignore  API_REFERENCE.md  CHANGELOG.md  CLEANUP_SUMMARY.md  CODE_STANDARDS.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  PUBLISHING.md  PYPI_README.md  README.md  TROUBLESHOOTING.md  pyproject.toml
.github/: CICD_SETUP.md  FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
architecture/: UNIFIED_REMOTEDESKTOP_APPROACH.md  UNIFIED_REMOTEDESKTOP_SUMMARY.md
docs/: MIGRATION_TO_UNIFIED.md  README.md  UNIFIED_QUICK_REFERENCE.md  UNIFIED_REMOTEDESKTOP_SUMMARY.md  WINDOW_MANAGEMENT_API.md
examples/: README.md  show_desktop_ui_tree.py  unified_ai_agent_demo.py  unified_debug.py  unified_minimal.py  window_management_demo.py
src/open_alo_core/: __init__.py  exceptions.py  types.py  window.py  window_manager.py
src/open_alo_core/utils/: __init__.py
src/open_alo_core/wayland/: capture.py  input.py  unified.py
tests/: README.md  test_functional.py  test_structure.py  test_unified.py
