[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "open-alo-core"
version = "0.1.0"
description = "Modern Linux desktop automation SDK with Wayland support - Single permission for screen capture and input control"
readme = "PYPI_README.md"
license = "MIT"
authors = [
    {name = "OPEN_ALO Contributors", email = "open.alo@example.com"}
]
maintainers = [
    {name = "OPEN_ALO Contributors", email = "open.alo@example.com"}
]
keywords = [
    "automation",
    "desktop",
    "linux",
    "wayland",
    "screen-capture",
    "input-control",
    "ai-agents",
    "remote-desktop",
    "xdg-portal",
    "pipewire",
    "gstreamer",
    "gnome"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Desktop Environment",
    "Topic :: System :: Monitoring",
    "Environment :: X11 Applications :: Gnome",
    "Intended Audience :: Science/Research",
]
requires-python = ">=3.8"
dependencies = [
    "PyGObject>=3.40.0",
]

[project.urls]
Homepage = "https://github.com/JonyBepary/Open-ALO"
Documentation = "https://github.com/JonyBepary/Open-ALO/blob/main/API_REFERENCE.md"
Repository = "https://github.com/JonyBepary/Open-ALO"
Issues = "https://github.com/JonyBepary/Open-ALO/issues"
Changelog = "https://github.com/JonyBepary/Open-ALO/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]
